[package]
name = "password-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
eframe = "0.32.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros", "sync", "rt-multi-thread"] }
windows-dpapi = "0.1.0"
zeroize = "1.8.1"

[dependencies.windows]
version = "0.61.3"
features = ["Security_Credentials_UI"]
